[package]
name = "terminal-ui"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui="0.10.0"
termion = "1.5"
rand = "0.7.3"
serde = {version = "1.0.116", features = ["derive"] }
nats = "0.8.0"
serde_json = "1.0.57"
reqwest = { version = "0.10.8", features = ["blocking"] }